# SquawkBus-python

./: mypy.ini  pyproject.toml
examples/: authenticated_authorizer.py  authenticated_notifier.py  authenticated_publisher.py  authenticated_subscriber.py  callback_notifier.py  callback_publisher.py  callback_subscriber.py  simple_subscriber.py  simple_subscriber2.py
squawkbus/: __init__.py
tests/: test_messages.py  test_serialization.py
tests/authentication/: test_basic_authentication.py
