[tool.poetry]
name = "squawkbus"
version = "1.0.0"
description = "A python3 client for SquawkBus"
authors = ["Rob Blackbourn <rob.blackbourn@googlemail.com>"]
readme = "README.md"
repository = "https://github.com/SquawkBus/SquawkBus-python3"
packages = [
    { include = "squawkbus" },
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
aioconsole = "^0.1.15"
pytest = "^5.1"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8"
pylint = "^2.9.6"
mypy = "^0.910"
autopep8 = "^1.5.7"
mkdocs = "^1.0"
mkdocs-material = "^4.6.0"
jetblack-markdown = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
